--- a/css/login_interface.css
+++ b/css/login_interface.css
@@ -5,18 +5,18 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
 }
-/*NAVIGATION SECTION*/
+
 section {
     position: relative;
     width: 100%;
     min-height: 100vh;
-    padding: 100px;
+    padding: 10px 100px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     background-color: #ffffff;
+    
 }
 
 header {
@@ -46,7 +46,8 @@ header ul li {
 
 header ul li a {
     display: inline-block;
-    color: #1e1e1e;
+    color: #434242;
+    font-family: 'Poppins', sans-serif; 
     font-weight: 400;
     margin-left: 20px;
     padding: 10px 15px 10px 15px;
@@ -61,7 +62,6 @@ header ul li a {
 }
 
 header ul li a:hover {
-    color: #ffffff;
    background-color: #E38B29;
    padding: 5px 10px 5px 10px;
 }
@@ -81,52 +81,11 @@ header ul li a:hover {
     0% { opacity: 0; }
     100% { opacity: 1;}
 }
-/*END NAVIGATION*/
 
-body {
-    padding-top: 8em;
-}
-
-main {
-    width: 100%;
-    max-width: 400px;
-    padding: 5rem 4rem;
-    margin: auto;
-    border-radius: 5%;
-    background-color: #ffffff;
-    background-image: linear-gradient(342deg, #ffffff 0%, #e38b29 100%);
-
-
-}
-.h3 {
-    display: flex;
-    justify-content: center;
-    font-family: 'Poppin', sans-serif;
-    font-weight: 900;
-    color: #ffffff;
-}
-
-.form-control { /*textfield*/
-    margin-bottom: 1.5em;
-    color: #ffffff;
-}
-
-.registerButton {
-    outline: #E38B29;
-    background-color: #E38B29;
-    margin-top: 25px;
-    border: #E38B29 1px solid;
-    border-radius: 10px;
-    padding: 2px 10px 2px 10px;
-}
-
-.registerButton a {
-    text-decoration: none;
-    color: #000000;
-    font-size: 12px;  
+h2  {
     font-family: 'Poppins', sans-serif;
+    font-weight: 900;
 }
-
 
 
 
